# Jones-Project-

./: .gitignore  jones_blocks.shp  main.py  pipeline.py  pipeline_v1.ipynb  pipeline_v3.py  pipeline_v4.py  pyproject.toml  test_config.json
pipeline_steps/: config.py  district_generator.py  election_simulator.py  preference_profile_generator.py  results_visualization.py  settings_writer.py
previous_versions/: pipeline_v2.py
