[project]
name = "jones-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gerrychain[geo]>=0.3.2",
    "votekit>=3.3.0",
    "pandas>=2.0",
    "geopandas>=0.14",
    "tqdm>=4.0",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "jsonlines>=4.0.0",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "binary-ensemble",
]
